# Aetherscan

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  cli.py  config.py  data_generation.py  environment.yml  environment_nocuda.yml  evaluate.py  inference.py  main.py  preprocessing.py  pyproject.toml  train.py
.github/workflows/: claude-code-review.yml  claude.yml
db/: __init__.py  db.py
logger/: __init__.py  logger.py
manager/: __init__.py  manager.py
models/: random_forest.py  vae.py
monitor/: __init__.py  monitor.py
src/aetherscan/: __init__.py  cli.py  config.py  data_generation.py  inference.py  main.py  preprocessing.py  train.py
src/aetherscan/db/: db.py
src/aetherscan/logger/: logger.py
src/aetherscan/manager/: manager.py
src/aetherscan/models/: random_forest.py  vae.py
src/aetherscan/monitor/: monitor.py
utils/: system_info.sh
